--- a/team and client/_footer.scss
+++ b/team and client/_footer.scss
@@ -3,12 +3,25 @@ footer {
     text-align: center;
     height: 355px;
 
+    @include mq(375px) {
+        height: auto;
+
+    }
+
+
+
+
 
     .projet {
         display: inline-flex;
         cursor: pointer;
         position: relative;
         top: 30px;
+
+        @include mq(375px) {
+            right: 10px;
+        }
+
 
 
         &:hover {
@@ -30,6 +43,13 @@ footer {
             left: 22px;
 
             transition: all 0.4s ease-in-out;
+
+            @include mq(375px) {
+                top: 35px;
+                font-size: 30px;
+
+
+            }
         }
 
         h3 {
@@ -37,12 +57,31 @@ footer {
             font-size: 40px;
             font-weight: normal;
             transition: all 0.3s ease-in-out;
+
+            @include mq(375px) {
+                font-size: 30px;
+
+            }
         }
     }
 }
 
 .footer-content {
     margin-top: 60px;
+
+    @include mq(375px) {
+
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr .4fr 0.4fr;
+        grid-template-areas: "form"
+            "contact"
+            "icon";
+
+
+    }
+
+
 }
 
 .flaot {
@@ -52,6 +91,11 @@ footer {
     @include mq(800px) {
         width: 32.90%;
     }
+
+    @include mq(375px) {
+        float: none;
+    }
+
 }
 
 footer {
@@ -62,10 +106,25 @@ footer {
         @include mq(800px) {
             font-size: 13px;
             margin-top: 20px;
+
+        }
+
+        @include mq(375px) {
+            grid-area: contact;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: -10px;
+
+            .cnt {
+                position: relative;
+                right: 35px;
+            }
+
         }
 
         h4 {
             font-weight: 100;
+
 
 
         }
@@ -80,6 +139,12 @@ footer {
     .form {
         margin-left: 10px;
 
+
+        @include mq(375px) {
+            grid-area: form;
+
+        }
+
         .text-input {
             padding: 10px 30px;
             margin-bottom: 20px;
@@ -92,12 +157,21 @@ footer {
             width: 160px;
             transition: .4s ease-in-out;
 
+            @include mq(375px) {
+                margin-left: 55%;
+            }
+
             &::placeholder {
                 color: #ffffff80;
             }
 
             &:focus {
                 width: 230px;
+
+                @include mq(375px) {
+                    width: 160px;
+
+                }
             }
         }
 
@@ -108,6 +182,11 @@ footer {
             border: 1px solid #bc93fd;
             border-radius: 50px;
             transition: .5S;
+
+            @include mq(375px) {
+                margin-left: 115%;
+
+            }
 
             &:hover {
                 background-color: #8561be;
@@ -120,6 +199,13 @@ footer {
     }
 
     .footer-icon {
+
+        @include mq(375px) {
+            grid-area: icon;
+            margin-left: 35%;
+
+        }
+
         .icon {
             @include flex();
             margin: 60px;
@@ -138,6 +224,13 @@ footer {
             font-size: 19px;
             color: rgb(165, 164, 164);
             border-radius: 50%;
+
+            @include mq(375px) {
+                padding-right: 10px;
+
+
+            }
+
 
             &:hover {
                 .fa-twitter {
@@ -168,6 +261,10 @@ footer {
 
 
             padding: 0;
+
+
+
+
 
 
 
