--- a/section-pricing/styles.css
+++ b/section-pricing/styles.css
@@ -300,6 +300,24 @@ h1 {
 
 .section2 .pricing .standard:hover {
   width: 90%;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#8f25D6), to(#569cf7));
+  background-image: linear-gradient(#8f25D6, #569cf7);
+  color: white;
+}
+
+.section2 .pricing .standard:hover .prix {
+  background: none;
+  background-color: white;
+}
+
+.section2 .pricing .standard:hover .prix h3 {
+  color: black;
+}
+
+.section2 .pricing .standard:hover button {
+  color: black;
+  background: none;
+  background-color: white;
 }
 
 .section2 .pricing .professionnel {
@@ -406,7 +424,22 @@ h1 {
   color: white;
 }
 
-.section2 .demande {
+.section2 .pricing .professionnel:hover .prix {
+  background: none;
+  background-color: white;
+}
+
+.section2 .pricing .professionnel:hover .prix h3 {
+  color: black;
+}
+
+.section2 .pricing .professionnel:hover button {
+  color: black;
+  background: none;
+  background-color: white;
+}
+
+.section2 .pricing .demande {
   border-right: #8f25D6 6px solid;
   padding: 30px;
   border-radius: 8px;
@@ -421,55 +454,55 @@ h1 {
   border: none;
 }
 
-.section2 .demande img {
+.section2 .pricing .demande img {
   border: #8f25D6 solid;
   border-radius: 100%;
   width: 50%;
   margin: 20px 25%;
 }
 
-.section2 .demande .stars {
+.section2 .pricing .demande .stars {
   color: #8f25D6;
 }
 
-.section2 .demande .personne h3 {
+.section2 .pricing .demande .personne h3 {
   color: #8f25D6;
 }
 
-.section2 .demande .social {
+.section2 .pricing .demande .social {
   display: none;
   width: 100%;
   border-bottom: #8f25D6 6px solid;
 }
 
-.section2 .demande .social .fab {
+.section2 .pricing .demande .social .fab {
   font-size: 400%;
   padding: 10% 3%;
 }
 
-.section2 .demande .social .fa-facebook-square:hover {
+.section2 .pricing .demande .social .fa-facebook-square:hover {
   color: #1877F2;
 }
 
-.section2 .demande .social .fa-whatsapp-square:hover {
+.section2 .pricing .demande .social .fa-whatsapp-square:hover {
   color: #25D366;
 }
 
-.section2 .demande .social .fa-twitter-square:hover {
+.section2 .pricing .demande .social .fa-twitter-square:hover {
   color: #1DA1F2;
 }
 
-.section2 .demande:hover .social {
+.section2 .pricing .demande:hover .social {
   display: contents;
 }
 
-.section2 .demande h2 {
+.section2 .pricing .demande h2 {
   -ms-grid-row: 1;
   -ms-grid-row-span: 1;
   grid-row: 1/2;
 }
 
-.section2 .demande button {
+.section2 .pricing .demande button {
   height: 50px;
   width: 80%;
   background-image: -webkit-gradient(linear, left top, right top, from(#8f25D6), to(#569cf7));
@@ -479,7 +512,7 @@ h1 {
   color: white;
 }
 
-.section2 .demande .prix {
+.section2 .pricing .demande .prix {
   -ms-grid-row: 2;
   -ms-grid-row-span: 2;
   grid-row: 2/4;
@@ -491,19 +524,37 @@ h1 {
   background-image: linear-gradient(#8f25D6, #569cf7);
 }
 
-.section2 .demande .prix h3 {
+.section2 .pricing .demande .prix h3 {
   margin: 80px auto;
   width: 50%;
   color: white;
 }
 
-.section2 .demande .container {
+.section2 .pricing .demande .container {
   -ms-grid-row: 4;
   -ms-grid-row-span: 1;
   grid-row: 4/5;
 }
 
-.section2 .demande:hover {
+.section2 .pricing .demande:hover {
   width: 90%;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#8f25D6), to(#569cf7));
+  background-image: linear-gradient(#8f25D6, #569cf7);
+  color: white;
+}
+
+.section2 .pricing .demande:hover .prix {
+  background: none;
+  background-color: white;
+}
+
+.section2 .pricing .demande:hover .prix h3 {
+  color: black;
+}
+
+.section2 .pricing .demande:hover button {
+  color: black;
+  background: none;
+  background-color: white;
 }
 /*# sourceMappingURL=styles.css.map */
