--- a/footer/style.scss
+++ b/footer/style.scss
@@ -1,3 +1,7 @@
+html{
+  margin: 0;
+  padding: 0;
+}
 body{
   margin:0px ;
   padding:0px ;
@@ -8,9 +12,10 @@ body{
 .cc{
   
   background-image: url(img/photodefotre.jpg);
-  background-size: 2000PX;
+  background-size: cover;
   width: 100%;
   height:500px ;
+  
 
   
 
@@ -79,7 +84,8 @@ body{
 
   .contenu{
     
-  background-color:  #555454;
+  background-image: url(img/hil.jpg);
+
     width:100% ;
     height:250px ;
     display: grid;
@@ -95,13 +101,15 @@ body{
    
   .f h4{
     font-size:20px ;
-    color:  #912c2c;
-  
+    color:  #000000;
+    margin-top:70px ;
   
   }
   .f a{
     font-size:20px ;
     color:  #500f3c;
+    margin-top:70px ;
+    
     
   }
  
@@ -114,17 +122,25 @@ body{
     grid-column: 1/2;
     grid-row:1/2 ;
     margin-left: 200px;
+    margin-top:60px ;
+    
   }
   .f{
     grid-column: 2/3;
     grid-row:1/2 ;
+    
     
   }
   .inputs{
     grid-column: 1/3;
     grid-row:2/3 ;
     margin-left: 600px;
+    margin-top:20px ;
+  
   }
+  
+
+  
   
   
   
