--- a/section-pricing/styles.scss
+++ b/section-pricing/styles.scss
@@ -8,6 +8,12 @@ body {
     background-image: url(img/back.jpg);
 }
 
+@mixin resp($size) {
+    @media (max-width: #{$size}) {
+        @content;
+    }
+}
+
 @mixin tous {
     border-right: $principe 6px solid;
     padding: 30px;
@@ -15,6 +21,10 @@ body {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     text-align: center;
     background-color: white;
+    @include resp(800px) {
+        border-right: $principe 3px solid;
+        padding: 10px;
+    }
     img {
         border: $principe solid;
         border-radius: 100%;
@@ -36,6 +46,10 @@ body {
         .fab {
             font-size: 400%;
             padding: 10% 3%;
+            @include resp(800px) {
+                font-size: 300%;
+                padding: 10% 3%;
+            }
         }
         .fa-facebook-square:hover {
             color: #1877F2;
@@ -63,18 +77,32 @@ h1 {
     margin-top: 20px;
     display: grid;
     grid-template-columns: repeat(8, 1fr);
-    grid-column-gap: 5%;
+    grid-column-gap: 3%;
+    @include resp(800px) {
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }
     .jone {
         grid-column: 2/4;
         @include tous;
+        @include resp(800px) {
+            grid-column: 1/2;
+        }
     }
     .steve {
         grid-column: 4/6;
-        @include tous
+        @include tous;
+        @include resp(800px) {
+            grid-column: 2/3;
+        }
     }
     .ball {
         grid-column: 6/8;
-        @include tous
+        @include tous;
+        @include resp(800px) {
+            grid-column: 3/4;
+        }
     }
 }
 
@@ -152,3 +180,5 @@ h1 {
         }
     }
 }
+
+@import './footer';
