--- a/service/style.scss
+++ b/service/style.scss
@@ -235,6 +235,11 @@ i {
         margin-bottom: 20%;
         margin-left: 10px;
     }
+    @media (max-width:375px){
+     margin: 0;
+     margin-bottom: 10%;
+     margin-left: 15%;
+    }
 
 }
 
@@ -263,3 +268,78 @@ i {
 }
 
 @import"./style" ;
+/*mobile*/
+@media (max-width:375px){
+    body{
+        width: 375;
+        padding: 0;
+        margin: 0;
+    }
+    .stitre{
+        font-size: 160%;
+        margin-right: 25%;
+    }
+    .svideo{
+        width: 450px;
+        margin-left: -70px;
+    }
+    .Spara{
+        font-size: 100%;
+        max-width: 70%;
+    }
+    .Ssection1{
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+    .Spart1{
+        font-size: 120%;
+    }
+    .para1{
+        font-size: 80%;
+        padding: 10%;
+    }
+    .btn{
+        width: 120px;
+        height: 40px;
+        margin-top: 20%;
+    }
+    .ssection3{
+        margin-bottom: 10%;
+
+    }
+    .StitreD{
+        margin: 10%;
+        position: relative;
+        right:120px;
+    }
+    .StitreF{
+        margin-right: 30%;
+        position: relative;
+        bottom: 60px;
+    }
+    .btb{
+        position: relative;
+        bottom: 50px;
+        position: relative;
+        right: 15%;
+        font-size: 130%;
+        height: 80px;
+        width: 300px;
+    }
+    .btR{
+        font-size: 130%;
+        height: 50px;
+        width: 110px;
+        
+    }
+    .ser{
+        font-size: 130%;
+        position: relative;
+        right:30px;
+    }
+    i.fab {
+        font-size: 40px;
+        margin-right: 130px;
+    }
+}
+
