--- a/service/style.scss
+++ b/service/style.scss
@@ -339,7 +339,8 @@ i {
     }
     i.fab {
         font-size: 40px;
-        margin-right: 130px;
+        position: relative;
+        right: 100px;
     }
 }
 
