--- a/service/style.css
+++ b/service/style.css
@@ -466,7 +466,8 @@ i {
   }
   i.fab {
     font-size: 40px;
-    margin-right: 130px;
+    position: relative;
+    right: 100px;
   }
 }
 /*# sourceMappingURL=style.css.map */
