--- a/section-pricing/styles.scss
+++ b/section-pricing/styles.scss
@@ -14,6 +14,41 @@ body {
     }
 }
 
+@mixin mobile {
+    @include resp(375px) {
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(4, auto);
+        img {
+            width: 80%;
+            margin: 0;
+        }
+        .para {
+            grid-column: 1/3;
+            grid-row: 2/3;
+        }
+        .stars {
+            grid-column: 1/3;
+            grid-row: 3/4;
+            display: flex;
+            justify-content: center;
+        }
+        .social {
+            .fab {
+                grid-column: 1/3;
+                grid-row: 4/5;
+            }
+            .fa-facebook-square {
+                padding-left: 33%;
+            }
+            .fa-whatsapp-square {
+                padding-right: 33%;
+            }
+        }
+    }
+}
+
 @mixin tous {
     border-right: $principe 6px solid;
     padding: 30px;
@@ -78,10 +113,18 @@ h1 {
     display: grid;
     grid-template-columns: repeat(8, 1fr);
     grid-column-gap: 3%;
+    // ---------------desctop
     @include resp(800px) {
         width: 100%;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
+    }
+    @include resp(376px) {
+        width: 80%;
+        margin: auto;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-row-gap: 10px;
     }
     .jone {
         grid-column: 2/4;
@@ -89,6 +132,7 @@ h1 {
         @include resp(800px) {
             grid-column: 1/2;
         }
+        @include mobile;
     }
     .steve {
         grid-column: 4/6;
@@ -96,6 +140,11 @@ h1 {
         @include resp(800px) {
             grid-column: 2/3;
         }
+        @include resp(375px) {
+            grid-row: 2/3;
+            grid-column: 1/2;
+        }
+        @include mobile;
     }
     .ball {
         grid-column: 6/8;
@@ -103,6 +152,11 @@ h1 {
         @include resp(800px) {
             grid-column: 3/4;
         }
+        @include resp(375px) {
+            grid-row: 3/4;
+            grid-column: 1/2;
+        }
+        @include mobile;
     }
 }
 
@@ -170,11 +224,18 @@ h1 {
             width: 100%;
             grid-column-gap: 20px;
         }
+        @include resp(375px) {
+            width: 300px;
+            overflow: scroll;
+        }
         .standard {
             @include pricing;
             border: none;
             @include resp(800px) {
                 border: none;
+            }
+            @include resp(375px) {
+                width: 280px;
             }
         }
         .professionnel {
@@ -183,12 +244,18 @@ h1 {
             @include resp(800px) {
                 border: none;
             }
+            @include resp(375px) {
+                width: 280px;
+            }
         }
         .demande {
             @include pricing;
             border: none;
             @include resp(800px) {
                 border: none;
+            }
+            @include resp(375px) {
+                width: 280px;
             }
         }
     }
