--- a/footer/style.scss
+++ b/footer/style.scss
@@ -1,5 +1,10 @@
-
-    $tablet:800px;
+$tablet:800px;
+$mobile:375px;
+@mixin mobile {
+    @media (max-width: #{$mobile}) {
+        @content;
+    }
+$tablet:800px;
 @mixin tablet {
     @media (max-width: #{$tablet}) {
         @content;
@@ -13,7 +18,9 @@ body{
   box-sizing:border-box ;
   background-color:#EEEEEE;
   font-family:  'Montserrat';
+  @include mobile(){
 
+  }
 }
 .cc{
   
@@ -21,6 +28,7 @@ body{
   background-size: cover;
   width: 100%;
   height:500px ;
+  
   
 
 }
@@ -65,7 +73,9 @@ body{
     width:200px ;
     }
     
+    @include mobile(){
     
+    }  
   }
   .numéro{
     width:350px ;
@@ -79,7 +89,9 @@ body{
    margin-left:150px ;
     width:200px ;
    }
+   @include mobile(){
     
+  } 
   }
   
   
@@ -94,7 +106,9 @@ body{
     width:200px ;
    margin-left:70px ;
     }
-
+    @include mobile(){
+    
+    }
   }
   .votre{
     width:350px ;
@@ -107,7 +121,9 @@ body{
       margin-left:70px ;
 
     }
+    @include mobile(){
     
+    }
     
   }
 
@@ -126,6 +142,9 @@ body{
     margin-left:100px ;
    width:70% ;
     height: 250px;
+    @include mobile(){
+    
+    }
 
   }
 }
