--- a/a propos (omar)/style.css
+++ b/a propos (omar)/style.css
@@ -13,15 +13,22 @@ body {
   background-size: 1550px 600px;
   height: 600px;
   background-attachment: fixed;
+  width: 100%;
+  /*.abg{
+       width: 100%;
+       height: 600px;
+       position: absolute;
+       z-index: 2;
+       background-color: rgba($color: #7d54be, $alpha: .7);
+    
+   }  */
 }
 
-/*.aheader .abg {
-  width: 100%;
-  height: 600px;
-  position: absolute;
-  z-index: 2;
-  background-color: rgba(226, 12, 198, 0.4);
-}*/
+@media screen and (max-width: 800px) {
+  .aheader {
+    background-position: center;
+  }
+}
 
 .center {
   margin-left: 33%;
@@ -42,19 +49,23 @@ body {
   font-weight: 900;
 }
 
-.aorg{ 
- display: flex ;  
- height: 600px;
+/*--------------------------------------------------------------------*/
+.fixed {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  grid-row: 1fr 1fr 1fr;
 }
 
 .apart1 {
- background-color: #82ECE8;
- padding: 100px 30px ;
- flex-basis: 32%;
- line-height: 40px;
-
- 
- 
+  width: 506px;
+  height: 610px;
+  margin-top: -4px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background-color: #82ECE8;
+  padding: 50px;
 }
 
 .apart1 h1 {
@@ -66,6 +77,7 @@ body {
   padding-bottom: 20px;
   font-weight: lighter;
   color: #EB2F5B;
+  line-height: 30px;
 }
 
 .hr {
@@ -77,21 +89,28 @@ body {
 
 .apart1 p {
   margin-top: 25px;
+  width: 320px;
+  line-height: 40px;
 }
 
-.aorg img {
-  width: 524px;
-  padding-right: 10px;
+.apart2 img {
+  width: 506px;
+  height: 610px;
+  margin-top: -4px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .apart3 {
+  width: 506px;
+  height: 610px;
+  margin-top: -4px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   background-color: black;
   color: white;
-  -ms-flex-preferred-size: 35%;
-      flex-basis: 35%;
-  margin-left: -20px;
-  width: 100%;
-  padding: 140px 35px;
+  padding: 50px;
+  padding-top: 100px;
 }
 
 .apart3 h1 {
@@ -101,7 +120,7 @@ body {
 
 .apart3 p {
   margin-bottom: 30px;
-  line-height: 40px;
+  line-height: 50px;
 }
 
 .apart3 button {
@@ -113,34 +132,46 @@ body {
   width: 180px;
   font-weight: bold;
   font-size: 15px;
+  outline: none;
+  -webkit-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out;
+}
+
+.butt:hover {
+  background-color: #FED841;
+  border-color: #FED841;
 }
 
 /*--------------------------------------------------------------------*/
-.aorg2{
-    display: flex; 
-    height: 600px;
-}
-
 .apaart1 img {
-  width: 479px;
-  height: 600px;
+  width: 506px;
+  height: 610px;
+  margin-top: -4px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .apaart2 {
+  width: 506px;
+  height: 610px;
+  margin-top: -4px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   background-color: #FED841;
-  width: 916px;
-  margin-left: 0px;
-  padding: 140px 64px;
+  padding: 50px;
 }
 
 .apaart2 p {
-  margin-bottom: 40px;
+  padding-top: 30px;
+  margin-bottom: 20px;
   font-weight: 900;
   font-size: 25px;
+  line-height: 40px;
 }
 
 .apaart2 img {
   border-radius: 100%;
+  width: 110px;
 }
 
 .apaart2 h3 span {
@@ -155,10 +186,14 @@ body {
 }
 
 .apaart3 {
-  width: 1085px;
+  width: 506px;
+  height: 610px;
+  margin-top: -4px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   background-color: #EB2F5B;
   color: white;
-  padding: 140px 35px;
+  padding: 50px;
 }
 
 .apaart3 h2 {
@@ -167,7 +202,7 @@ body {
 }
 
 .apaart3 p {
-  line-height: 30px;
+  line-height: 50px;
 }
 
 .aespace {
@@ -175,18 +210,15 @@ body {
 }
 
 /*--------------------------------------------------------------------*/
-
-.aorg3{
-
-   display: flex;
-   height: 600px;
-}
-
 .apaaart1 {
+  width: 506px;
+  height: 610px;
+  margin-top: -4px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   background-color: black;
   color: white;
-  width: 411px;
-  padding: 140px 35px;
+  padding: 50px;
 }
 
 .apaaart1 h1 {
@@ -203,16 +235,21 @@ body {
 }
 
 .apaaart1 p {
-  line-height: 30px;
+  line-height: 40px;
   font-weight: 900;
   text-align: center;
   margin-top: 30px;
 }
 
 .apaaart2 {
+  width: 506px;
+  height: 610px;
+  margin-top: -4px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   background-color: white;
-  width: 445px;
-  padding: 140px 35px;
+  padding: 50px;
+  padding-top: 90px;
 }
 
 .apaaart2 h2 {
@@ -230,21 +267,25 @@ body {
 
 .apaaart2 p {
   color: #7777;
-  line-height: 30px;
+  line-height: 40px;
   margin-top: 30px;
 }
 
 .apaaart2 hr {
   height: 10px;
   background: #EB2F5B;
-  width: 55%;
+  width: 60%;
   border-color: #EB2F5B;
   margin-top: -36px;
   margin-left: 2px;
 }
 
 .apaaart3 {
-  width: 528px;
+  width: 506px;
+  height: 610px;
+  margin-top: -4px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   background: url(img/bout.jpg) no-repeat;
 }
 
@@ -254,46 +295,85 @@ body {
   font-size: 50px;
   font-weight: 900;
   color: white;
+  padding: 10px;
 }
 
 .apaaart3 h1 a {
-  color: red;
+  text-decoration: none;
+  -webkit-transition: all 0.8S ease-in-out;
+  transition: all 0.8S ease-in-out;
+}
+
+.hov:hover {
+  color: #FED841;
+  font-weight: 900;
 }
 
 .apaaart3 hr {
-    height: 10px;
-    background: #EB2F5B; 
-    width:35%;
-    border-color:#EB2F5B ;
-    margin-left: 310px;
-    margin-top: -5px;  
+  height: 10px;
+  background: #EB2F5B;
+  width: 37%;
+  border-color: #EB2F5B;
+  margin-left: 298px;
+  margin-top: -12px;
 }
-@media screen and (max-width:800px){
 
-   .aheader{
-
-    width:140%;
-    background-position: top;
-    
-    
-   }
-
-   .center {
-
-     margin-left: 43%;
-   }
-
- .aorg img {
-      width: 450px;
- }
- 
- .apart3{
-     flex-basis: 37%;
-
-
-     
- }
-
-    
-
+@media screen and (max-width: 800px) {
+  .fixed {
+    grid: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
+    width: 50%;
+  }
+  .center {
+    margin-left: 185px;
+    margin-top: 240px;
+  }
+  .apaaart3 {
+    display: none;
+  }
+  .apart1 {
+    width: 400px;
+    height: 700px;
+  }
+  .apart2 img {
+    width: 400px;
+    height: 700px;
+  }
+  .apart3 {
+    width: 400px;
+    height: 700px;
+  }
+  .apaart1 img {
+    width: 400px;
+    height: 700px;
+  }
+  .apaart2 {
+    width: 400px;
+    height: 700px;
+  }
+  .apaart2 h3 {
+    margin-left: 70px;
+  }
+  .apaart3 {
+    width: 400px;
+    height: 700px;
+  }
+  .apaaart1 {
+    width: 400px;
+    height: 700px;
+  }
+  .apaaart2 {
+    width: 400px;
+    height: 700px;
+  }
+  .apaaart2 p {
+    line-height: 30px;
+  }
+  .apaaart2 hr {
+    width: 81%;
+  }
 }
+/*# sourceMappingURL=style.css.map */
