--- a/footer/style.css
+++ b/footer/style.css
@@ -1,4 +1,9 @@
 @charset "UTF-8";
+html {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0px;
   padding: 0px;
@@ -10,7 +15,7 @@ body {
 
 .cc {
   background-image: url(img/photodefotre.jpg);
-  background-size: 2000PX;
+  background-size: cover;
   width: 100%;
   height: 500px;
 }
@@ -73,7 +78,7 @@ body {
 }
 
 .contenu {
-  background-color: #a17a7a;
+  background-image: url(img/hil.jpg);
   width: 100%;
   height: 250px;
   display: -ms-grid;
