--- a/_footer.scss
+++ b/_footer.scss
@@ -1,65 +1,165 @@
+@mixin flex {
+    display: flex;
+    justify-content: space-around;
+}
+
+@mixin mq($width) {
+    @media (max-width: #{$width}) {
+        @content;
+    }
+}
+
 footer {
     background-color: rgb(95, 97, 99);
     text-align: center;
     height: 355px;
+
+    @include mq(375px) {
+        height: auto;
+
+    }
+
+
+
+
+
     .projet {
         display: inline-flex;
         cursor: pointer;
         position: relative;
         top: 30px;
+
+        @include mq(375px) {
+            right: 10px;
+        }
+
+
+
         &:hover {
             h3 {
                 color: #bc93fd;
             }
+
             i {
                 color: #bc93fd;
                 left: 32px;
             }
         }
+
         i {
             font-size: 40px;
             color: white;
             position: relative;
             top: 45px;
             left: 22px;
+
             transition: all 0.4s ease-in-out;
+
+            @include mq(375px) {
+                top: 35px;
+                font-size: 30px;
+
+
+            }
         }
+
         h3 {
             color: white;
             font-size: 40px;
             font-weight: normal;
             transition: all 0.3s ease-in-out;
+
+            @include mq(375px) {
+                font-size: 30px;
+
+            }
         }
     }
 }
 
 .footer-content {
     margin-top: 60px;
+
+    @include mq(375px) {
+
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr .4fr 0.4fr;
+        grid-template-areas: "form"
+            "contact"
+            "icon";
+
+
+    }
+
+
 }
 
 .flaot {
     float: left;
     width: 33%;
+
+    @include mq(800px) {
+        width: 32.90%;
+    }
+
+    @include mq(375px) {
+        float: none;
+    }
+
 }
 
 footer {
     .contact {
         color: #ffffff80;
         margin-top: 10px;
+
+        @include mq(800px) {
+            font-size: 13px;
+            margin-top: 20px;
+
+        }
+
+        @include mq(375px) {
+            grid-area: contact;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: -10px;
+
+            .cnt {
+                position: relative;
+                right: 35px;
+            }
+
+        }
+
         h4 {
             font-weight: 100;
+
+
+
         }
+
         h4:hover {
             color: #bc93fd;
             transition: all 0.3s ease;
             cursor: pointer;
         }
     }
+
     .form {
         margin-left: 10px;
+
+
+        @include mq(375px) {
+            grid-area: form;
+
+        }
+
         .text-input {
             padding: 10px 30px;
             margin-bottom: 20px;
+
             background: none;
             border: 1px solid #bc93fd;
             color: white;
@@ -67,13 +167,25 @@ footer {
             outline-style: none;
             width: 160px;
             transition: .4s ease-in-out;
+
+            @include mq(375px) {
+                margin-left: 55%;
+            }
+
             &::placeholder {
                 color: #ffffff80;
             }
+
             &:focus {
                 width: 230px;
+
+                @include mq(375px) {
+                    width: 160px;
+
+                }
             }
         }
+
         .submit-input {
             background: none;
             color: #ffffff80;
@@ -81,54 +193,93 @@ footer {
             border: 1px solid #bc93fd;
             border-radius: 50px;
             transition: .5S;
+
+            @include mq(375px) {
+                margin-left: 115%;
+
+            }
+
             &:hover {
                 background-color: #8561be;
                 color: white;
                 border: 1px solid #8561be;
             }
+
+
         }
     }
+
     .footer-icon {
+
+        @include mq(375px) {
+            grid-area: icon;
+            margin-left: 35%;
+
+        }
+
         .icon {
             @include flex();
             margin: 60px;
         }
+
         ul {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
             list-style: none;
         }
+
         .icon-link {
             display: flex;
             text-decoration: none;
             font-size: 19px;
             color: rgb(165, 164, 164);
             border-radius: 50%;
+
+            @include mq(375px) {
+                padding-right: 10px;
+
+
+            }
+
+
             &:hover {
                 .fa-twitter {
                     color: #1da1f2;
                 }
+
                 .fa-facebook-f {
                     color: #1877f2;
                 }
+
                 .fa-instagram {
                     color: #e4405f;
                 }
+
                 .fa-linkedin-in {
                     color: #0077b5;
                 }
             }
         }
     }
+
     .copy {
         h6 {
-            display: block;
+            width: 300px;
             color: #ffffff80;
             font-weight: 100;
-            margin: 0;
-            cursor: pointer;
+            margin: 0 auto;
+
+
             padding: 0;
+
+
+
+
+
+
+
         }
+
     }
 }
