--- a/footer/style.css
+++ b/footer/style.css
@@ -28,7 +28,7 @@ body {
   color: #b227e9;
 }
 
-.input1 {
+.nn .input1 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -41,7 +41,7 @@ body {
   margin-left: 5%;
 }
 
-.non {
+.nn .non {
   width: 350px;
   height: 40px;
   border-radius: 15px;
@@ -51,13 +51,13 @@ body {
 }
 
 @media (max-width: 800px) {
-  .non {
+  .nn .non {
     margin-left: -380px;
     width: 200px;
   }
 }
 
-.numéro {
+.nn .numéro {
   width: 350px;
   height: 40px;
   border-radius: 15px;
@@ -68,13 +68,13 @@ body {
 }
 
 @media (max-width: 800px) {
-  .numéro {
+  .nn .numéro {
     margin-left: 150px;
     width: 200px;
   }
 }
 
-.adres {
+.nn .adres {
   width: 350px;
   height: 40px;
   margin-bottom: 20px;
@@ -84,13 +84,13 @@ body {
 }
 
 @media (max-width: 800px) {
-  .adres {
+  .nn .adres {
     width: 200px;
     margin-left: 70px;
   }
 }
 
-.votre {
+.nn .votre {
   width: 350px;
   height: 40px;
   margin-left: 22%;
@@ -99,13 +99,13 @@ body {
 }
 
 @media (max-width: 800px) {
-  .votre {
+  .nn .votre {
     width: 200px;
     margin-left: 70px;
   }
 }
 
-.message {
+.nn .message {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   width: 41%;
@@ -118,288 +118,11 @@ body {
   border: 1.3px solid #bc93fd;
 }
 
-@media (max-width: 800px) {
-  .message {
+@media (max-width: 375px) {
+  .nn .message {
     margin-left: 100px;
     width: 70%;
     height: 250px;
   }
-}
-
-footer {
-  background-color: #5f6163;
-  text-align: center;
-  height: 355px;
-}
-
-@media (max-width: 375px) {
-  footer {
-    height: auto;
-  }
-}
-
-footer .projet {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  cursor: pointer;
-  position: relative;
-  top: 30px;
-}
-
-@media (max-width: 375px) {
-  footer .projet {
-    right: 10px;
-  }
-}
-
-footer .projet:hover h3 {
-  color: #bc93fd;
-}
-
-footer .projet:hover i {
-  color: #bc93fd;
-  left: 32px;
-}
-
-footer .projet i {
-  font-size: 40px;
-  color: white;
-  position: relative;
-  top: 45px;
-  left: 22px;
-  -webkit-transition: all 0.4s ease-in-out;
-  transition: all 0.4s ease-in-out;
-}
-
-@media (max-width: 375px) {
-  footer .projet i {
-    top: 35px;
-    font-size: 30px;
-  }
-}
-
-footer .projet h3 {
-  color: white;
-  font-size: 40px;
-  font-weight: normal;
-  -webkit-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-}
-
-@media (max-width: 375px) {
-  footer .projet h3 {
-    font-size: 30px;
-  }
-}
-
-.footer-content {
-  margin-top: 60px;
-}
-
-@media (max-width: 375px) {
-  .footer-content {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
-    -ms-grid-rows: 1fr .4fr 0.4fr;
-        grid-template-rows: 1fr .4fr 0.4fr;
-        grid-template-areas: "form" "contact" "icon";
-  }
-}
-
-.flaot {
-  float: left;
-  width: 33%;
-}
-
-@media (max-width: 800px) {
-  .flaot {
-    width: 32.90%;
-  }
-}
-
-@media (max-width: 375px) {
-  .flaot {
-    float: none;
-  }
-}
-
-footer .contact {
-  color: #ffffff80;
-  margin-top: 10px;
-}
-
-@media (max-width: 800px) {
-  footer .contact {
-    font-size: 13px;
-    margin-top: 20px;
-  }
-}
-
-@media (max-width: 375px) {
-  footer .contact {
-    grid-area: contact;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: -10px;
-  }
-  footer .contact .cnt {
-    position: relative;
-    right: 35px;
-  }
-}
-
-footer .contact h4 {
-  font-weight: 100;
-}
-
-footer .contact h4:hover {
-  color: #bc93fd;
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-  cursor: pointer;
-}
-
-footer .form {
-  margin-left: 10px;
-}
-
-@media (max-width: 375px) {
-  footer .form {
-    grid-area: form;
-  }
-}
-
-footer .form .text-input {
-  padding: 10px 30px;
-  margin-bottom: 20px;
-  background: none;
-  border: 1px solid #bc93fd;
-  color: white;
-  border-radius: 50px;
-  outline-style: none;
-  width: 160px;
-  -webkit-transition: .4s ease-in-out;
-  transition: .4s ease-in-out;
-}
-
-@media (max-width: 375px) {
-  footer .form .text-input {
-    margin-left: 55%;
-  }
-}
-
-footer .form .text-input::-webkit-input-placeholder {
-  color: #ffffff80;
-}
-
-footer .form .text-input:-ms-input-placeholder {
-  color: #ffffff80;
-}
-
-footer .form .text-input::-ms-input-placeholder {
-  color: #ffffff80;
-}
-
-footer .form .text-input::placeholder {
-  color: #ffffff80;
-}
-
-footer .form .text-input:focus {
-  width: 230px;
-}
-
-@media (max-width: 375px) {
-  footer .form .text-input:focus {
-    width: 160px;
-  }
-}
-
-footer .form .submit-input {
-  background: none;
-  color: #ffffff80;
-  padding: 10px 15px;
-  border: 1px solid #bc93fd;
-  border-radius: 50px;
-  -webkit-transition: .5S;
-  transition: .5S;
-}
-
-@media (max-width: 375px) {
-  footer .form .submit-input {
-    margin-left: 115%;
-  }
-}
-
-footer .form .submit-input:hover {
-  background-color: #8561be;
-  color: white;
-  border: 1px solid #8561be;
-}
-
-@media (max-width: 375px) {
-  footer .footer-icon {
-    grid-area: icon;
-    margin-left: 35%;
-  }
-}
-
-footer .footer-icon .icon {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  margin: 60px;
-}
-
-footer .footer-icon ul {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  list-style: none;
-}
-
-footer .footer-icon .icon-link {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  text-decoration: none;
-  font-size: 19px;
-  color: #a5a4a4;
-  border-radius: 50%;
-}
-
-@media (max-width: 375px) {
-  footer .footer-icon .icon-link {
-    padding-right: 10px;
-  }
-}
-
-footer .footer-icon .icon-link:hover .fa-twitter {
-  color: #1da1f2;
-}
-
-footer .footer-icon .icon-link:hover .fa-facebook-f {
-  color: #1877f2;
-}
-
-footer .footer-icon .icon-link:hover .fa-instagram {
-  color: #e4405f;
-}
-
-footer .footer-icon .icon-link:hover .fa-linkedin-in {
-  color: #0077b5;
-}
-
-footer .copy h6 {
-  width: 300px;
-  color: #ffffff80;
-  font-weight: 100;
-  margin: 0 auto;
-  padding: 0;
 }
 /*# sourceMappingURL=style.css.map */
