--- a/team and client/_footer.scss
+++ b/team and client/_footer.scss
@@ -103,6 +103,10 @@ footer {
         width: 32.90%;
     }
 
+    @include mq(767px) {
+        width: 32.80%;
+    }
+
     @include mq(375px) {
         float: none;
     }
