UPDATE HEADER SECTION

--- a/style1.css
+++ b/style1.css
@@ -199,6 +199,7 @@ body {
     font-size: 25px;
     position: relative;
     right: 120px;
+    top: 40px;
     color: black;
   }
 }
@@ -227,11 +228,12 @@ body {
 
 @media (max-width: 375px) {
   .hhead h1 {
-    font-size: 30px;
+    font-size: 42px;
+    max-width: 300px;
     color: black;
     position: relative;
-    right: 60px;
-    bottom: 30px;
+    left: 18px;
+    top: 170px;
   }
 }
 
@@ -291,8 +293,8 @@ body {
 @media (max-width: 375px) {
   .hhead .halone {
     position: relative;
-    left: -580px;
-    top: -1px;
+    left: -570px;
+    top: 50px;
   }
 }
 
