--- a/style1.scss
+++ b/style1.scss
@@ -212,6 +212,7 @@
                                                                      font-size: 25px;
                                                                      position: relative;
                                                                      right: 120px;
+                                                                     top: 40px;
                                                                      color: $btn-bg-color;
                                                                  }
                                                              }
@@ -233,11 +234,12 @@
                                                                      font-size: 42px;
                                                                  }
                                                                  @include mobile() {
-                                                                     font-size: 30px;
+                                                                     font-size: 42px;
+                                                                     max-width: 300px;
                                                                      color: $btn-bg-color;
                                                                      position: relative;
-                                                                     right: 60px;
-                                                                     bottom: 30px;
+                                                                     left: 18px;
+                                                                     top: 170px;
                                                                  }
                                                              }
                                                              @include btn();
@@ -252,8 +254,8 @@
                                                                  }
                                                                  @include mobile() {
                                                                      position: relative;
-                                                                     left: -580px;
-                                                                     top: -1px;
+                                                                     left: -570px;
+                                                                     top: 50px;
                                                                  }
                                                              }
                                                          }
